I believe this is working, now with lofi bg

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>Patrick Coury WDI Assessment</h1>
       <input type="file" id="files" name="files[]" multiple />
       <output id="list"></output>
+      <div id="body"></div>
 
     </div>
   </body>
